# s

./: pyproject.toml  w.txt
accounts/: admin.py  apps.py  authentication.py  models.py  permissions.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: apps.py  views.py
frontend/client/: index.html  package-lock.json  package.json  vite.config.js
frontend/client/src/: App.jsx  index.css  main.jsx
frontend/client/src/components/: CodeBlock.jsx  Navbar.css  Navbar.jsx  ProtectedRoute.jsx  SectionForm.jsx
frontend/client/src/context/: AuthContext.jsx
frontend/client/src/pages/: EditSnippet.jsx  Explore.jsx  Home.jsx  Login.jsx  MySnippets.jsx  NewSnippet.jsx  Register.jsx  SnippetDetail.jsx  Test.jsx  Users.jsx
frontend/client/src/styles/: Form.css  Users.css
snippets/: admin.py  models.py  serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py  0002_alter_snippet_code_snippetsection.py
